# calculator

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: App.tsx  app.css  main.tsx  workspaceDrafts.ts  workspacePreview.ts
src/components/results/: ResultPanel.tsx
src/core/contracts/: index.test.ts  index.ts
src/core/expression/: compiler.ts  index.ts  parser.ts  tokenizer.ts  types.ts
src/core/matrix/: engine.test.ts  engine.ts  index.ts
src/core/numerical/: engine.ts  index.ts
src/core/precision/: index.ts
src/core/solver/: engine.test.ts  engine.ts  index.ts
src/features/calculate/: CalculateWorkspace.tsx  calculate.css
src/features/history/: model.ts
src/features/matrix/: MatrixWorkbench.tsx
src/features/memory/: model.ts
src/features/numerical-tools/: NumericalToolsWorkspace.tsx  numerical-tools.css
src/features/settings/: model.ts
src/features/solver/: SolverWorkbench.tsx  model.ts  solver.css
src/persistence/: schema.ts  store.test.ts  store.ts
src/services/calculate/: index.ts
src/services/matrix/: index.ts  service.test.ts  service.ts
src/services/numerical/: index.ts  (+1 more)
tests/: test_scaffold.py
tests/expression/: expressionEngine.test.ts
tests/integration/: appFlow.test.ts
tests/matrix/: test_matrix_artifacts.py
tests/numerical/: numericalTools.test.ts
tests/precision/: precisionModes.test.ts
tests/solver/: test_solver_artifacts.py
(+3 files in other folders)
